<resources>
    <string name="app_name">WeatherTestApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add_city">Добавить город</string>
    <string name="cities">Города</string>
    <string name="settings_menu_title">Настройки</string>

    <string-array name="cardinal_direction">
        <item>С</item>
        <item>СВ</item>
        <item>С</item>
        <item>ЮВ</item>
        <item>Ю</item>
        <item>ЮЗ</item>
        <item>З</item>
        <item>СЗ</item>
    </string-array>

    <string name="weather_desc">Погода</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="wind">Ветер</string>
    <string name="clouds">Облачность</string>

    <string name="stub_value">[Value]</string>

    <!-- Strings related to Settings -->

    <string name="temp">Температура</string>

    <string-array name="temp_unit">
        <item>°C</item>
        <item>°F</item>
    </string-array>

    <string-array name="temp_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="wind_speed">Скорость ветра</string>
    <string name="my_city_list">Мой список</string>
    <string name="search_result">Результаты поиска</string>

    <string-array name="wind_unit">
        <item>м/с</item>
        <item>мили/ч</item>
    </string-array>

    <string-array name="wind_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pressure_unit">
        <item>мм рт.ст.</item>
        <item>гПа</item>
    </string-array>

    <string-array name="pressure_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>
