<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pershin.eugene.weathertestapp.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvCity"
            android:text="City"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvTemp"
            android:text="@string/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCity"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <ImageView
            android:id="@+id/icon_main"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/tvTemp"
            android:layout_toEndOf="@+id/tvTemp"
            android:layout_alignTop="@+id/tvTemp" />

        <TextView
            android:id="@+id/tvWeather"
            android:text="@string/weather_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTemp"
            android:layout_alignLeft="@+id/tvTemp"
            android:layout_alignStart="@+id/tvTemp"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/lblPressure"
            android:text="@string/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_below="@+id/tvWeather"
            android:layout_marginTop="35dp" />

        <TextView
            android:id="@+id/tvPressure"
            android:text="@string/stub_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/lblPressure"
            android:layout_toEndOf="@+id/lblPressure"
            android:layout_alignTop="@+id/lblPressure"
            android:layout_marginLeft="75dp"
            android:layout_marginStart="75dp"/>

        <TextView
            android:id="@+id/lblHumidity"
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblPressure"
            android:layout_alignLeft="@+id/lblPressure"
            android:layout_alignStart="@+id/lblPressure"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/tvHumidity"
            android:text="@string/stub_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lblHumidity"
            android:layout_alignBottom="@+id/lblHumidity"
            android:layout_alignLeft="@+id/tvWind"
            android:layout_alignStart="@+id/tvWind" />

        <TextView

            android:id="@+id/lblWind"
            android:text="@string/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblHumidity"
            android:layout_alignLeft="@+id/lblHumidity"
            android:layout_alignStart="@+id/lblHumidity"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/tvWind"
            android:text="@string/stub_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/lblWind"
            android:layout_alignLeft="@+id/tvPressure"
            android:layout_alignStart="@+id/tvPressure" />

        <TextView
            android:id="@+id/lblClouds"
            android:text="@string/clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblWind"
            android:layout_alignLeft="@+id/lblWind"
            android:layout_alignStart="@+id/lblWind"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/tvClouds"
            android:text="@string/stub_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/lblClouds"
            android:layout_alignLeft="@+id/tvHumidity"
            android:layout_alignStart="@+id/tvHumidity" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="visible"
            android:background="@android:color/background_light"/>

    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>
